replace new operator with valueOf factory method